err/zerodoc.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zerodoc'...
Compiling './lib/python3.5/site-packages/zerodoc/confluence.py'...
***   File "./lib/python3.5/site-packages/zerodoc/confluence.py", line 48
    print 'unknown element in sourcelines ' + str(sline) + ' ' + str(sline.keys())
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zerodoc/diagram.py'...
***   File "./lib/python3.5/site-packages/zerodoc/diagram.py", line 57
    print 'Error generating diagram!'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zerodoc/html.py'...
***   File "./lib/python3.5/site-packages/zerodoc/html.py", line 76
    print 'no string in sourceline? ' + str(sline) + ' ' + str(sline.keys())
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zerodoc/parse.py'...
***   File "./lib/python3.5/site-packages/zerodoc/parse.py", line 55
    print "Illegal character '%s'" % t.value[0]
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zerodoc/rst.py'...
***   File "./lib/python3.5/site-packages/zerodoc/rst.py", line 79
    print 'no string in sourceline? ' + str(sline) + ' ' + str(sline.keys())
                                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
